--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,5 +1,4 @@
-#cloudshell-traffic-teravm-chassis>=1.0,<1.1
+cloudshell-tg-teravm>=1.0,<1.1
 cloudshell-core>=2.2,<2.3
 cloudshell-shell-core>=3.1,<3.2
 cloudshell-networking-devices>=2.5,<2.6
-requests==2.18.4
